[package]

name = "hash_ring"
version = "0.2.0"
authors = ["Matt McCoy <mattnenterprise@yahoo.com>"]
documentation = "https://docs.rs/hash_ring"
repository = "https://github.com/mattnenterprise/rust-hash-ring"
homepage = "https://github.com/mattnenterprise/rust-hash-ring"
description = "Consistent Hashing library for Rust"
readme = "README.md"
license = "MIT"

keywords = ["consistent-hashing", "hash-ring"]
categories = ["data-structures"]

[dependencies]
twox-hash = "1.6.0"
